[package]
name = "steiger"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
docker_credential = "1.3.2"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = "1.1.0"
oci-distribution = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
prodash = { version = "30.0.1", features = ["render-line", "render-line-crossterm"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yml = "0.0.12"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "io-util", "sync", "fs", "full"] }
which = "8.0.0"
