[package]
name = "steiger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "steiger"
path = "src/main.rs"

[lib]
name = "steiger"
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1.3"
async-tempfile = "0.7.0"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
docker_credential = "1.3.2"
futures = "0.3.31"
gix = { version = "0.75.0", default-features = false, features = ["status"] }
heck = "0.5.0"
hex = "0.4.3"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = "1.1.0"
miette = { version = "7.6.0", features = ["fancy"] }
oci-client = { git = "https://github.com/oras-project/rust-oci-client", rev = "95a20eb0cb7a05167b1507b51c5a6800d3bab6f9", version = "0.15.0", default-features = false, features = [
  "rustls-tls"
] }
olpc-cjson = "0.1.4"
prodash = { version = "30.0.1", features = [
  "render-line",
  "render-line-crossterm",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls-webpki-roots"
] }
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
serde_yml = "0.0.12"
sha2 = "0.10.9"
subst = "0.3.8"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
which = "8.0.0"

[features]
default = []
schemars = ["dep:schemars"]
